 minor : increase on risk of code breakage during a major release
 bug   : increase on bug or incremental changes

Version 4.0.11
 * CHANGE: when redifining a single parameter option using inheritence the value will be replaced
 * CHANGE: FlowSpec TRUE and FALSE value have been updated to use the latest RFC and are therefore inverted from previous versions
 * Feature: support for extended next-hop (RFC 5549)
 * Fix: regression pointed in #873
   patch: Malcolm Dodds
 * Fix: do not crash when trying to be helpful in presenting notification message
   reported by: Adam Jacob Muller
 * Fix: issue while handling ranged neighbors
   patch: Wenxin Wang
 * Fix: accumulating families when using multiple peers
   patch: Martin Topholm (reviewed)
 * Fix: could not reload configuration
   reported by: gbock
 * Feature: better RFC5575bis support, better treat as withdraw
   patch: Christoph Loibl
 * Fix: Fix issue when using peer ASN discovery
   patch: Zac Medico
 * Fix: MD5 encoding
   reported by: Adam Jacob Muller (with an initial idea for a patch)

Version 4.0.10
 * Feature: Add decoding for Mac Mobility

Version 4.0.9
 * Change: re-enabled multiple source/destination in flow
 * Fix: forward port of #845, send state down messages on peer removal
   orginal patch: Andre Kampert
 * Feature: add != test of flows
   patch by: dhammika
 * Fix: Read pipename from env file rather than using default 
   patch by: Craig Milne
 * Fix: using teardown could crash exabgp
   patch by: Matthias Wichtlhuber
 * Fix: use of label and rd with announce attributes

Version 4.0.8
 * Fix: PEP-0479

Version 4.0.7
 * Feature: added prefix for ip-reachability-tlv
   patch: Tinus Flagstad
 * Feature: forewardport #840 (RFC 7674 - Support redirect traffic to a VRF encoded as 4-octet AS)
   original patch by: Omri Matitiau
 * Fix: handling of processes when the configuration reload fails
   patch by: Malcolm Dodds
 * Fix: healthcheck, remove options.ip_setup in dynamic ip management